--- a/assets/css/less/bui/tree.less
+++ b/assets/css/less/bui/tree.less
@@ -1,5 +1,9 @@
 .bui-tree-list{
   border: 1px solid @borderColor;
+  overflow: auto;
+}
+.bui-tree-list ul{
+  overflow: hidden;
 }
 
 .bui-tree-item{
